seaqt/QtPdf/gen_qpdfdestination.h

class QMetaObject;
class QPdfDestination;
class QPointF;
typedef struct QMetaObject QMetaObject;
typedef struct QPdfDestination QPdfDestination;
typedef struct QPointF QPointF;
QPdfDestination* QPdfDestination_new(QPdfDestination* other);
void QPdfDestination_operatorAssign(QPdfDestination* self, QPdfDestination* other);
void QPdfDestination_swap(QPdfDestination* self, QPdfDestination* other);
bool QPdfDestination_isValid(const QPdfDestination* self);
int QPdfDestination_page(const QPdfDestination* self);
QPointF* QPdfDestination_location(const QPdfDestination* self);
double QPdfDestination_zoom(const QPdfDestination* self);
const QMetaObject* QPdfDestination_staticMetaObject();